--- a/my-app/src/styles/index.css
+++ b/my-app/src/styles/index.css
@@ -128,7 +128,7 @@
     margin-right: 0;
 }
 }.add_modules__element {
-    width: calc(25% - 40px);
+    width: calc(100% - 40px)!important;
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 14px;
@@ -1562,6 +1562,15 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
+.page__fixed__element__icon.texticon{
+    background-image: url(./images/fixed__text.svg);
+}
+.page__fixed__element__icon.headphone{
+    background-image: url(./images/fixed__headphone.svg);
+}
+.page__fixed__element__icon.play{
+    background-image: url(./images/fixed__play.svg);
+}
 @media (max-width: 805px) {
     .page {
     height: calc(100% - 50px);
@@ -2141,8 +2150,14 @@
     .text {
     padding-left: 20px;
 }
-}.text__content {
-    width: 100%}
+}
+.text__content {
+    width: 100%
+}
+.text__content__padding{
+    padding-left: 24px;
+    padding-right: 24px;
+}
 .text__image {
     width: 100%;
     height: 438px;
@@ -2335,8 +2350,11 @@
     font-size: 14px;
     text-align: left;
     line-height: 140%}
-}.text__slider {
-    width: 100%;
+}
+.text__slider {
+    width: calc(100% - 100px);
+    margin-left: auto;
+    margin-right: auto;
     height: 620px;
     position: relative;
     z-index: 19;
