--- a/my-app/src/components/scrollWrapper/scrollWrapper.css
+++ b/my-app/src/components/scrollWrapper/scrollWrapper.css
@@ -24,7 +24,8 @@
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
-    padding-right: 10px;
+    padding-right: 26px;
+    padding-left: 16px;
 }
 
 .scrollWrapper__hidden{
